# mind-games

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_app.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
.streamlit/: config.toml
configs/: app.yaml  scoring.yaml  settings.yaml  symbols.yaml
data/samples/: nifty_futures_sample.csv
docs/: ARCHITECTURE.md
scripts/: tasks.ps1
src/api/: __init__.py  main.py  routes.py  routes_context.py  routes_market.py  routes_market_active.py  routes_market_clean.py  routes_market_final.py  routes_market_mtf.py  routes_market_runtime.py  schemas.py
src/backtest/: engine.py  metrics.py  scenarios.py
src/dashboard/: api_catalog.py  api_client.py  app.py  bhavcopy_context.py  bootstrap.py  cpr_scanner_view.py  data.py  theme.py
src/features/: camarilla.py  cpr.py  feature_store.py  market_profile.py  order_flow.py  session_context.py  volume_profile.py  vwap.py
src/utils/: config.py  (+3 more)
tests/: test_api.py  test_api_catalog.py  test_bhavcopy_context.py  test_cpr_scanner.py  test_cpr_scanner_view.py  test_cpr_scheduler.py  test_dashboard_api_client.py  test_dashboard_auth.py  test_dashboard_bhavcopy_ui.py  test_features.py  test_ingestion.py  test_labels.py  test_live_market_data_client.py  test_live_runtime.py  test_live_signal_service.py  test_market_data_client.py  test_models.py  test_module_hygiene.py  test_rules.py  test_telegram_client.py
tradingview/: Nifty_AMT_Camarilla_Volume_Profile_Delta_Engine.pine
(+46 files in other folders)
